--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "make": "webpack", 
+    "make": "webpack",
     "watch": "webpack --watch"
   },
   "repository": {
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/hyoga-dev/test-note-app#readme",
   "devDependencies": {
+    "css-loader": "^6.7.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
